Lab3 - new pages Concert Venue, adding some animations, minor fixs

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <a href="#">Fans appeal</a>
         </li>
         <li>
-          <a href="#">Concert venue</a>
+          <a href="concert_venue.html">Concert venue</a>
         </li>
         <li>
           <a href="#">Admin</a>
@@ -36,49 +36,34 @@
     </nav>
   </header>
   <main>
+    <h1>
+      The Neighbourhood
+    </h1>
     <img src="images/theneighbourhood.jpg" alt="The Neighbourhood Band" style="display: block; margin: auto;">
     <section>
       <h3>
         About The NBHD
       </h3>
       <p>
-        The Neighbourhood (sometimes rendered as "THE NBHD") is an American rock band formed in Newbury Park, California, in 2011.
-        The band is composed of vocalist Jesse Rutherford, guitarists Jeremy Freedman and Zach Abels, bassist Mikey Margott, and
-        drummer Brandon Alexander Fried. After releasing two EPs, <em>I'm Sorry...</em> and <em>Thank You</em>, The Neighbourhood
-        released its firstfull-length album <em>I Love You.</em> on April 23, 2013, via Columbia Records. The same year, the EP
-        <em>The Love Collection</em> was released; and in November 2014, a mixtape titled <em>#000000 & #FFFFFF</em>. A second album,
-        <em>Wiped Out!</em> was released in October 30, 2015. The <em>Hard</em> EP followed in September 2017 and cracked the
-        <strong>Billboard 200</strong> as a surprise release. In 2018, the band delivered their third album, the eponymously titled
-        <em>The Neighbourhood</em>, which was anchored by the single "Scary Love". Two more EPs followed, <em>To Imagine</em> and
-        <em>Ever Changing</em>, with all three of their 2018 EPs later compiled into a release called <em>Hard to Imagine the
-        Neighbourhood Ever Changing</em>. The Neighbourhood continued their prolifc streak, returning in 2019 with the acoustic
-        single "Middle of Somewhere."
+        The Neighbourhood (sometimes rendered as "THE NBHD") is an American rock band formed in Newbury Park, California, in 2011. The band is composed of vocalist Jesse Rutherford, guitarists Jeremy Freedman and Zach Abels, bassist Mikey Margott, and drummer Brandon Alexander Fried. After releasing two EPs, <em>I'm Sorry...</em> and <em>Thank You</em>, The Neighbourhood released its firstfull-length album <em>I Love You.</em> on April 23, 2013, via Columbia Records. The same year, the EP
+        <em>The Love Collection</em> was released; and in November 2014, mixtape titled <em>#000000 & #FFFFFF</em>. A second album, <em>Wiped Out!</em> was released in October 30, 2015. The <em>Hard</em> EP followed in September 2017 and cracked the <strong>Billboard 200</strong> as a surprise release. In 2018, the band delivered their third album, the eponymously titled <em>The Neighbourhood</em>, which was anchored by the single "Scary Love". Two more EPs followed, <em>To Imagine</em> and <em>Ever Changing</em>, with all three of their 2018 EPs later compiled into a release called <em>Hard to Imagine the Neighbourhood Ever Changing</em>. The Neighbourhood continued their prolifc streak, returning in 2019 with the acoustic single "Middle of Somewhere."
       </p>
     </section>
-    <section>
+    <section style="overflow: auto;">
       <h3>
         Best Album - <em>Wiped Out!</em>
       </h3>
-      <img src="images/The_Neighbourhood_-_Wiped_Out.jpg" alt="Wiped Out Album" style="float:right">
+      <img src="images/The_Neighbourhood_-_Wiped_Out.jpg" alt="Wiped Out Album" style="float:right; padding-left: 25px">
       <p>
-        California's the Neighbourhood are on a mission to make goth R&B a touchstone in the musical lexicon. It's a sound
-        they championed on their debut album, 2013's <em>I Love You</em>, and continue to explore on their sophomore effort,
-        2015's <em>Wiped Out!</em> Once again working with producer Justyn Pilbrow, the Neighbourhood expand upon the moody
-        synth, heavy bass, and echoey guitar-based style of <em>I Love You</em> with a collection of tracks that, while
-        not mind-blowing, will pleasingly remind most fans of the group's 2012 breakout track, "Sweater Weather". Lead
-        singer Jesse Rutherford brings a louche, cool-guy vibe to the microphone that combines the delicately melismatic
-        lilt of The Weeknd with the plaintive angst of the Cure's Robert Smith. It's a memorable, if somewhat overly self-conscious
-        stance. One minute, he's crooning self-seriously through fuzzy, echo-chamber effects ("Prey"); the next, he's sitting back,
-        seemingly commanding the listener through pure hip-hop swagger ( "R.I.P. 2 My Youth"). This savvy, cross-genre approach
-        means <em>Wiped Out!</em> will play well next to albums by any number of modern artists from Kanye West to Coldplay. It also
-        doesn't hurt that cuts like "Cry Baby", "Daddy Issues", and "Greetings from Califournia" counteract the band's somewhat
+        California's the Neighbourhood are on a mission to make goth R&B a touchstone in the musical lexicon. It's a sound they championed on their debut album, 2013's <em>I Love You</em>, and continue to explore on their sophomore effort, 2015's <em>Wiped Out!</em> Once again working with producer Justyn Pilbrow, the Neighbourhood expand upon the moody synth, heavy bass, and echoey guitar-based style of <em>I Love You</em> with a collection of tracks that, while not mind-blowing, will pleasingly remind most fans of the group's 2012 breakout track, "Sweater Weather". Lead singer Jesse Rutherford brings a louche, cool-guy vibe to the microphone that combines the delicately melismatic lilt of The Weeknd with the plaintive angst of the Cure's Robert Smith. It's a memorable, if somewhat overly self-conscious stance. One minute, he's crooning self-seriously through fuzzy, echo-chamber effects ("Prey"); the next, he's sitting back, seemingly commanding the listener through pure hip-hop swagger ( "R.I.P. 2 My Youth"). This savvy, cross-genre approach means <em>Wiped Out!</em> will play well next to albums by any number of modern artists from Kanye West to Coldplay. It also doesn't hurt that cuts like "Cry Baby", "Daddy Issues", and "Greetings from Califournia" counteract the band's somewhat
         downtempo vibe with catchy melodies and light, dance-oriented beats.
       </p>
     </section>
   </main>
-  <footer style="clear:right">
-    <p>
-      THIS IS MY FOOOOOOOTEEEEEER!
+  <hr>
+  <footer>
+    <p style="text-align: center;">
+      We are on <a href="https://soundcloud.com/theneighbourhood">Souncloud</a>
     </p>
   </footer>
 </body>
