Lab3 - minor changes

--- a/concert_venue.html
+++ b/concert_venue.html
@@ -49,10 +49,11 @@
           Date, address, contact info
         </h3>
         <p style="margin: auto; width: 500px;">
-          Date: Friday, 11.10.2019 <br>
-          Address: 3708 Las Vegas Boulevard South Las Vegas, NV  89109, USA <br>
-          The Cosmopolitan of Las Vegas <a href="https://www.cosmopolitanlasvegas.com/" target="_blank">site</a> <br>
-          Tickets you can buy <a href="https://www1.ticketmaster.com/the-neighbourhood/event/1700567CB71869F1" target="_blank">here</a> <br>
+          <em>Date:</em> Friday, 11.10.2019 <br>
+          <em>Address:</em> 3708 Las Vegas Boulevard South Las Vegas, NV  89109, USA <br>
+          <em>Info links:</em> <br>
+          <a href="https://www.cosmopolitanlasvegas.com/" target="_blank">The Cosmopolitan of Las Vegas</a> <br>
+          <a href="https://www1.ticketmaster.com/the-neighbourhood/event/1700567CB71869F1" target="_blank">Buy tickets now!</a> <br>
           <a href="https://www.google.com/maps/search/%D0%93%D0%BE%D1%81%D1%82%D0%B8%D0%BD%D0%B8%D1%86%D1%8B/@36.1227538,-115.1679516,14z/data=!3m1!4b1!4m5!2m4!5m3!5m2!4m1!1i2" target="_blank">Hotels to stay nearby</a>
         </p>
       </div>
