--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
   <hr>
   <footer>
     <p style="text-align: center;">
-      We are on <a href="https://soundcloud.com/theneighbourhood">Souncloud</a>
+      We are on <a href="https://soundcloud.com/theneighbourhood">Souncloud</a> <br>
+      We are on <a href="https://genius.com/artists/The-neighbourhood" target="_blank">Genius</a>
+    </p>
     </p>
   </footer>
 </body>
