--- a/index.html
+++ b/index.html
@@ -1,45 +1,61 @@
 <!DOCTYPE html>
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>The Neighbourhood</title>
+
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
   <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  <header>
-    <img src="images/The-Neighbourhood-Logo.png" alt="Logo">
-    <nav>
-      <ul>
-        <li>
-          <a href="#">Main</a>
-        </li>
-        <li>
-          <a href="#">News</a>
-        </li>
-        <li class="dropdown">
-          <a href="#">For fans</a>
-          <div class="dropdown-content">
-            <a href="#">Fan club</a>
-            <a href="#">Tour schedule</a>
-            <a href="#">Lyrics</a>
-          </div>
-        </li>
-        <li>
-          <a href="#">Fans appeal</a>
-        </li>
-        <li>
-          <a href="concert_venue.html">Concert venue</a>
-        </li>
-        <li>
-          <a href="#">Admin</a>
-        </li>
-      </ul>
+  <header class="sticky-top">
+    <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+      <a href="#" class="navbar-brand">
+        <img src="images/The-Neighbourhood-Logo Light.png" alt="Logo">
+      </a>
+
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse justify-content-center" id="collapsibleNavbar">
+        <ul class="navbar-nav text-center">
+          <li class="nav-item">
+            <a href="index.html" class="nav-link">Main</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">News</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">For fans</a>
+            <div class="dropdown-menu">
+              <a href="#" class="dropdown-item">Fan club</a>
+              <a href="#" class="dropdown-item">Tour schedule</a>
+              <a href="#" class="dropdown-item">Lyrics</a>
+            </div>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">Fans appeal</a>
+          </li>
+          <li class="nav-item">
+            <a href="concert_venue.html" class="nav-link">Concert venue</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">Admin</a>
+          </li>
+        </ul>
+      </div>
     </nav>
   </header>
   <main>
     <h1>
       The Neighbourhood
     </h1>
-    <img src="images/theneighbourhood.jpg" alt="The Neighbourhood Band" style="display: block; margin: auto;">
+    <img src="images/theneighbourhood.jpg" alt="The Neighbourhood Band" class="img-fluid mx-auto d-block">
     <section>
       <h3>
         About The NBHD
@@ -53,7 +69,7 @@
       <h3>
         Best Album - <em>Wiped Out!</em>
       </h3>
-      <img src="images/The_Neighbourhood_-_Wiped_Out.jpg" alt="Wiped Out Album" style="float:right; padding-left: 25px">
+      <img src="images/The_Neighbourhood_-_Wiped_Out.jpg" alt="Wiped Out Album" style="padding-left: 25px" class="float-right">
       <p>
         California's the Neighbourhood are on a mission to make goth R&B a touchstone in the musical lexicon. It's a sound they championed on their debut album, 2013's <em>I Love You</em>, and continue to explore on their sophomore effort, 2015's <em>Wiped Out!</em> Once again working with producer Justyn Pilbrow, the Neighbourhood expand upon the moody synth, heavy bass, and echoey guitar-based style of <em>I Love You</em> with a collection of tracks that, while not mind-blowing, will pleasingly remind most fans of the group's 2012 breakout track, "Sweater Weather". Lead singer Jesse Rutherford brings a louche, cool-guy vibe to the microphone that combines the delicately melismatic lilt of The Weeknd with the plaintive angst of the Cure's Robert Smith. It's a memorable, if somewhat overly self-conscious stance. One minute, he's crooning self-seriously through fuzzy, echo-chamber effects ("Prey"); the next, he's sitting back, seemingly commanding the listener through pure hip-hop swagger ( "R.I.P. 2 My Youth"). This savvy, cross-genre approach means <em>Wiped Out!</em> will play well next to albums by any number of modern artists from Kanye West to Coldplay. It also doesn't hurt that cuts like "Cry Baby", "Daddy Issues", and "Greetings from Califournia" counteract the band's somewhat
         downtempo vibe with catchy melodies and light, dance-oriented beats.
