--- a/index.html
+++ b/index.html
@@ -1,87 +1,89 @@
 <!DOCTYPE html>
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>The Neighbourhood</title>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>The Neighbourhood</title>
 
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
-  <link rel="stylesheet" type="text/css" href="css/main.css">
-</head>
-<body>
-  <header class="sticky-top">
-    <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-      <a href="#" class="navbar-brand">
-        <img src="images/The-Neighbourhood-Logo Light.png" alt="Logo">
-      </a>
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+  </head>
+  <body>
+    <header class="sticky-top">
+      <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+        <a href="#" class="navbar-brand">
+          <img src="images/The-Neighbourhood-Logo Light.png" alt="Logo">
+        </a>
 
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-      <div class="collapse navbar-collapse justify-content-center" id="collapsibleNavbar">
-        <ul class="navbar-nav text-center">
-          <li class="nav-item">
-            <a href="index.html" class="nav-link">Main</a>
-          </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link">News</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">For fans</a>
-            <div class="dropdown-menu">
-              <a href="#" class="dropdown-item">Fan club</a>
-              <a href="#" class="dropdown-item">Tour schedule</a>
-              <a href="#" class="dropdown-item">Lyrics</a>
-            </div>
-          </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link">Fans appeal</a>
-          </li>
-          <li class="nav-item">
-            <a href="concert_venue.html" class="nav-link">Concert venue</a>
-          </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link">Admin</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-  </header>
-  <main>
-    <h1>
-      The Neighbourhood
-    </h1>
-    <img src="images/theneighbourhood.jpg" alt="The Neighbourhood Band" class="img-fluid mx-auto d-block">
-    <section>
-      <h3>
-        About The NBHD
-      </h3>
-      <p>
-        The Neighbourhood (sometimes rendered as "THE NBHD") is an American rock band formed in Newbury Park, California, in 2011. The band is composed of vocalist Jesse Rutherford, guitarists Jeremy Freedman and Zach Abels, bassist Mikey Margott, and drummer Brandon Alexander Fried. After releasing two EPs, <em>I'm Sorry...</em> and <em>Thank You</em>, The Neighbourhood released its firstfull-length album <em>I Love You.</em> on April 23, 2013, via Columbia Records. The same year, the EP
-        <em>The Love Collection</em> was released; and in November 2014, mixtape titled <em>#000000 & #FFFFFF</em>. A second album, <em>Wiped Out!</em> was released in October 30, 2015. The <em>Hard</em> EP followed in September 2017 and cracked the <strong>Billboard 200</strong> as a surprise release. In 2018, the band delivered their third album, the eponymously titled <em>The Neighbourhood</em>, which was anchored by the single "Scary Love". Two more EPs followed, <em>To Imagine</em> and <em>Ever Changing</em>, with all three of their 2018 EPs later compiled into a release called <em>Hard to Imagine the Neighbourhood Ever Changing</em>. The Neighbourhood continued their prolifc streak, returning in 2019 with the acoustic single "Middle of Somewhere."
+        <div class="collapse navbar-collapse justify-content-center" id="collapsibleNavbar">
+          <ul class="navbar-nav text-center">
+            <li class="nav-item">
+              <a href="index.html" class="nav-link active">Main</a>
+            </li>
+            <li class="nav-item">
+              <a href="news.html" class="nav-link">News</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">For fans</a>
+              <div class="dropdown-menu">
+                <a href="#" class="dropdown-item">Fan club</a>
+                <a href="tour_schedule.html " class="dropdown-item">Tour schedule</a>
+                <a href="#" class="dropdown-item">Lyrics</a>
+              </div>
+            </li>
+            <li class="nav-item">
+              <a href="fans_appeal.html" class="nav-link">Fans appeal</a>
+            </li>
+            <li class="nav-item">
+              <a href="concert_venue.html" class="nav-link">Concert venue</a>
+            </li>
+            <li class="nav-item">
+              <a href="admin.html" class="nav-link">Admin</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+    <main>
+      <h1>
+        The Neighbourhood
+      </h1>
+      <img src="images/theneighbourhood.jpg" alt="The Neighbourhood Band" class="img-fluid mx-auto d-block">
+      <section>
+        <h3>
+          About The NBHD
+        </h3>
+        <p>
+          The Neighbourhood (sometimes rendered as "THE NBHD") is an American rock band formed in Newbury Park, California, in 2011. The band is composed of vocalist Jesse Rutherford, guitarists Jeremy Freedman and Zach Abels, bassist Mikey Margott, and drummer Brandon Alexander Fried. After releasing two EPs, <em>I'm Sorry...</em> and <em>Thank You</em>, The Neighbourhood released its firstfull-length album <em>I Love You.</em> on April 23, 2013, via Columbia Records. The same year, the EP
+          <em>The Love Collection</em> was released; and in November 2014, mixtape titled <em>#000000 & #FFFFFF</em>. A second album, <em>Wiped Out!</em> was released in October 30, 2015. The <em>Hard</em> EP followed in September 2017 and cracked the <strong>Billboard 200</strong> as a surprise release. In 2018, the band delivered their third album, the eponymously titled <em>The Neighbourhood</em>, which was anchored by the single "Scary Love". Two more EPs followed, <em>To Imagine</em> and <em>Ever Changing</em>, with all three of their 2018 EPs later compiled into a release called <em>Hard to Imagine the Neighbourhood Ever Changing</em>. The Neighbourhood continued their prolifc streak, returning in 2019 with the acoustic single "Middle of Somewhere."
+        </p>
+      </section>
+      <section style="overflow: auto;">
+        <h3>
+          Best Album - <em>Wiped Out!</em>
+        </h3>
+        <img src="images/The_Neighbourhood_-_Wiped_Out.jpg" alt="Wiped Out Album" style="padding-left: 25px" class="float-right">
+        <p>
+          California's the Neighbourhood are on a mission to make goth R&B a touchstone in the musical lexicon. It's a sound they championed on their debut album, 2013's <em>I Love You</em>, and continue to explore on their sophomore effort, 2015's <em>Wiped Out!</em> Once again working with producer Justyn Pilbrow, the Neighbourhood expand upon the moody synth, heavy bass, and echoey guitar-based style of <em>I Love You</em> with a collection of tracks that, while not mind-blowing, will pleasingly remind most fans of the group's 2012 breakout track, "Sweater Weather". Lead singer Jesse Rutherford brings a louche, cool-guy vibe to the microphone that combines the delicately melismatic lilt of The Weeknd with the plaintive angst of the Cure's Robert Smith. It's a memorable, if somewhat overly self-conscious stance. One minute, he's crooning self-seriously through fuzzy, echo-chamber effects ("Prey"); the next, he's sitting back, seemingly commanding the listener through pure hip-hop swagger ( "R.I.P. 2 My Youth"). This savvy, cross-genre approach means <em>Wiped Out!</em> will play well next to albums by any number of modern artists from Kanye West to Coldplay. It also doesn't hurt that cuts like "Cry Baby", "Daddy Issues", and "Greetings from Califournia" counteract the band's somewhat
+          downtempo vibe with catchy melodies and light, dance-oriented beats.
+        </p>
+      </section>
+    </main>
+    <hr>
+    <footer>
+      <p style="text-align: center;">
+        We are on <a href="https://soundcloud.com/theneighbourhood">Souncloud</a> <br>
+        We are on <a href="https://genius.com/artists/The-neighbourhood" target="_blank">Genius</a>
       </p>
-    </section>
-    <section style="overflow: auto;">
-      <h3>
-        Best Album - <em>Wiped Out!</em>
-      </h3>
-      <img src="images/The_Neighbourhood_-_Wiped_Out.jpg" alt="Wiped Out Album" style="padding-left: 25px" class="float-right">
-      <p>
-        California's the Neighbourhood are on a mission to make goth R&B a touchstone in the musical lexicon. It's a sound they championed on their debut album, 2013's <em>I Love You</em>, and continue to explore on their sophomore effort, 2015's <em>Wiped Out!</em> Once again working with producer Justyn Pilbrow, the Neighbourhood expand upon the moody synth, heavy bass, and echoey guitar-based style of <em>I Love You</em> with a collection of tracks that, while not mind-blowing, will pleasingly remind most fans of the group's 2012 breakout track, "Sweater Weather". Lead singer Jesse Rutherford brings a louche, cool-guy vibe to the microphone that combines the delicately melismatic lilt of The Weeknd with the plaintive angst of the Cure's Robert Smith. It's a memorable, if somewhat overly self-conscious stance. One minute, he's crooning self-seriously through fuzzy, echo-chamber effects ("Prey"); the next, he's sitting back, seemingly commanding the listener through pure hip-hop swagger ( "R.I.P. 2 My Youth"). This savvy, cross-genre approach means <em>Wiped Out!</em> will play well next to albums by any number of modern artists from Kanye West to Coldplay. It also doesn't hurt that cuts like "Cry Baby", "Daddy Issues", and "Greetings from Califournia" counteract the band's somewhat
-        downtempo vibe with catchy melodies and light, dance-oriented beats.
       </p>
-    </section>
-  </main>
-  <hr>
-  <footer>
-    <p style="text-align: center;">
-      We are on <a href="https://soundcloud.com/theneighbourhood">Souncloud</a> <br>
-      We are on <a href="https://genius.com/artists/The-neighbourhood" target="_blank">Genius</a>
-    </p>
-    </p>
-  </footer>
-</body>
+    </footer>
+  </body>
+</html>
