--- a/admin.html
+++ b/admin.html
@@ -56,20 +56,25 @@
       <h1>
         Admin
       </h1>
-      <label for="title"><strong>Title</strong></label><br>
-      <input type="text" name="title" size="100" placeholder="News title"><br>
-      <label for="text"><strong>Text</strong></label><br>
-      <textarea name="text" rows="15" cols="103" placeholder="News body"></textarea><br>
-      <label for="image"><strong>Image</strong></label><br>
-      <input type="file" name="image"><br><br>
-      <input type="submit" value="Publish">
+      <section>
+        <div class="admin-flex m-3">
+          <img src="images/noimage-md.png" alt="No image" class="float-left">
+          <input type="file" name="image" class="form-control-file" style="width:300px; max-width: 100%;">
+        </div>
+        <div class="admin-flex m-3">
+          <div class="">
+            <input type="text" name="title" size="100" placeholder="News title" class="form-control"><br>
+            <textarea name="text" rows="15" cols="103" placeholder="News body" class="form-control"></textarea>
+          </div>
+          <button type="submit" class="btn btn-dark mr-3">Publish</button>
+        </div>
+      </section>
     </main>
-    <hr>
     <footer>
+      <hr>
       <p style="text-align: center;">
         We are on <a href="https://soundcloud.com/theneighbourhood">Souncloud</a> <br>
         We are on <a href="https://genius.com/artists/The-neighbourhood" target="_blank">Genius</a>
-      </p>
       </p>
     </footer>
   </body>
