--- a/concert_venue.html
+++ b/concert_venue.html
@@ -75,10 +75,10 @@
         </div>
       </section>
     </main>
-    <hr>
     <footer>
+      <hr>
       <p style="text-align: center;">
-        We are on <a href="https://soundcloud.com/theneighbourhood" target="_blank">Souncloud</a> <br>
+        We are on <a href="https://soundcloud.com/theneighbourhood">Souncloud</a> <br>
         We are on <a href="https://genius.com/artists/The-neighbourhood" target="_blank">Genius</a>
       </p>
     </footer>
