--- a/news.html
+++ b/news.html
@@ -16,7 +16,7 @@
     <header class="sticky-top">
       <nav class="navbar navbar-expand-md bg-dark navbar-dark">
         <a href="#" class="navbar-brand">
-          <img src="images/The-Neighbourhood-Logo Light.png" alt="Logo">
+          <img src="images/The-Neighbourhood-Logo_Light.png" alt="Logo">
         </a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
